--- a/index.html
+++ b/index.html
@@ -4,8 +4,15 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Rock-Paper-Scissors</title>
+    <link rel="stylesheet" href="index.css" />
   </head>
   <body>
+    <div class="btns">
+      <button class="choice rock">Rock</button>
+      <button class="choice paper">Paper</button>
+      <button class="choice scissors">Scissors</button>
+    </div>
+    <div class="score"></div>
     <script src="index.js"></script>
   </body>
 </html>
